--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
 
     <!-- Page Content -->
     <div class="container">
+      <h1>Problem : Nuclear electricity</h1>
       <div ng-controller="RenewablesEnergiesCtrl">
         <div google-chart chart="myChartObject" style="height:600px; width:100%;"></div>
       </div>
