Transform controller to directive

--- a/app/index.html
+++ b/app/index.html
@@ -70,9 +70,7 @@
 
     <!-- Page Content -->
     <div class="container">
-      <div ng-controller="RenewablesEnergiesCtrl">
-        <div google-chart chart="myChartObject" style="height:600px; width:100%;"></div>
-      </div>
+      <renewable-energ></renewable-energ>
     </div>
     <!-- /.container -->
 
@@ -85,7 +83,7 @@
 
     <!-- Custom scripts -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/renewables_energies.js"></script>
+    <script src="scripts/directives/renewableenerg.js"></script>
 </body>
 
 </html>
