--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
           <span class="navbar-element"><span class="label label-as-badge label-primary">{{nbrShutdownedCentral}}</span> shutdowned nuclear central(s)</span>
         </li>
         <li>
-          <span class="navbar-element">Deficiency ratio : {{deficiencyRatio}} GWh</span>
+          <span class="navbar-element">Deficiency ratio : {{generalDeficiencyRatio.toFixed(0)}} GWh</span>
         </li>
       </ul>
     </div>
@@ -112,14 +112,14 @@
   <div class="row">
     <div class="col-md-6">
       <h3><span class="my-icon swiss_flag normal"></span> Part of renewables</h3>
-        <canvas id="pie" class="chart chart-pie" chart-data="renew_pie_data"
+        <canvas id="swiss_renew" class="chart chart-pie" chart-data="renew_pie_data"
                 chart-labels="renew_pie_labels" chart-options="renew_pie_options"
                 height="200" chart-colors="default_colors">
         </canvas>
     </div>
     <div class="col-md-6">
       <h3><span class="my-icon eu_flag normal"></span> Part of renewables</h3>
-      <canvas id="bar" class="chart chart-bar"
+      <canvas id="eu_renew" class="chart chart-bar"
               chart-data="renew_bar_data" chart-labels="renew_bar_labels"
               chart-series="renew_bar_series" chart-options="renew_bar_options"
               height="200" chart-colors="default_colors" chart-dataset-override="renew_bar_over">
@@ -131,7 +131,7 @@
     <div class="col-md-12">
       <div class="inline-headers">
         <h3>Wind strategy</h3>
-        <h5>covers <strong>25%</strong> of the deficiency (3543 GWh)</h5>
+        <h5>covers <strong>{{wind_strategy_cover_percentage.toFixed(1)}}%</strong> of the deficiency ({{wind_strategy_cover.toFixed(2)}} GWh)</h5>
       </div>
     </div>
   </div>
@@ -142,8 +142,11 @@
     </div>
     <div class="col-md-3 height-align">
       <div class="v-m">
-        <h1 align="center">10,000,000</h1>
-        <h5 align="center">of 2 MW</h5>
+        <div class="input-group">
+          <span class="input-group-addon"><span class="glyphicon glyphicon-plus"></span></span>
+          <input id="wind_trubines_nbr" type="number" class="form-control" min="0" ng-model="wind_input" ng-change="inputChange()">
+        </div>
+        <h5 align="center">wind turbines of 3 MW</h5>
       </div>
     </div>
     <div class="col-md-7 height-align">
@@ -160,7 +163,7 @@
     <div class="col-md-12">
       <div class="inline-headers">
         <h3>Solar strategy</h3>
-        <h5>covers <strong>25%</strong> of the deficiency (3543 GWh)</h5>
+        <h5>covers <strong>{{solar_strategy_cover_percentage.toFixed(1)}}%</strong> of the deficiency ({{solar_strategy_cover.toFixed(2)}} GWh)</h5>
       </div>
     </div>
   </div>
@@ -171,8 +174,11 @@
     </div>
     <div class="col-md-3 height-align">
       <div class="v-m">
-        <h1 align="center">25,000,000</h1>
-        <h5 align="center">of m<sup>2</sup></h5>
+        <div class="input-group">
+          <span class="input-group-addon"><span class="glyphicon glyphicon-plus"></span></span>
+          <input id="solar_surface" type="number" class="form-control" min="0" ng-model="solar_input" ng-change="inputChange()">
+        </div>
+        <h5 align="center">m<sup>2</sup></h5>
       </div>
     </div>
     <div class="col-md-7 height-align">
@@ -189,9 +195,19 @@
   <div class="row">
     <div class="col-md-6">
       <h3><span class="my-icon swiss_flag normal"></span> Total households consumption</h3>
+      <canvas id="swiss_total_cons" class="chart chart-line"
+              chart-data="total_household_cons_data" chart-labels="total_household_cons_labels"
+              height="200" chart-colors="default_colors"
+              chart-options="total_household_cons_opt">
+      </canvas>
     </div>
     <div class="col-md-6">
       <h3><span class="my-icon eu_flag normal"></span> Consumption per household</h3>
+      <canvas id="eu_cons_per_household" class="chart chart-bar"
+              chart-data="per_house_cons_data" chart-labels="per_house_cons_labels"
+              chart-options="per_house_cons_opt" height="200"
+              chart-colors="default_colors" >
+      </canvas>
     </div>
   </div>
 
@@ -209,9 +225,19 @@
   <div class="row">
     <div class="col-md-6">
       <h3><span class="my-icon swiss_flag normal"></span> Imports / exports ratio by season</h3>
+      <canvas id="swiss_imp_exp" class="chart chart-bar"
+              chart-data="swiss_imp_exp_data" chart-labels="swiss_imp_exp_labels"
+              chart-options="swiss_imp_exp_opt" height="200"
+              chart-colors="default_colors" >
+      </canvas>
     </div>
     <div class="col-md-6">
       <h3><span class="my-icon eu_flag normal"></span> Imports / exports ratio by year</h3>
+      <canvas id="eu_imp_exp" class="chart chart-bar"
+              chart-data="eu_imp_exp_data" chart-labels="eu_imp_exp_labels"
+              chart-options="eu_imp_exp_opt" height="200"
+              chart-colors="default_colors" >
+      </canvas>
     </div>
   </div>
 
